Fixed checkboxes & radio button alignment

--- a/assets/styl/_base/_form-elements.styl
+++ b/assets/styl/_base/_form-elements.styl
@@ -202,7 +202,7 @@ input[type='radio']
             position absolute
             top .25em
             left 0
-            width .75em
+            width 1em
             height @width
             border .125em solid $color-tertiary
 
